# Proyecto-1---MPointers

./: CMakeCache.txt  CMakeLists.txt
proto/: mpointers.grpc.pb.cc  mpointers.grpc.pb.h  mpointers.pb.cc  mpointers.pb.h  mpointers.proto
src/MPointers/: GRPCClient.cpp  GRPCClient.h  MPointer.h
src/MemoryManager/: main.cpp
src/MemoryManager/Controller/: MemoryManagerController.cpp  MemoryManagerController.h
src/MemoryManager/Model/: MemoryManagerModel.cpp  MemoryManagerModel.h
src/MemoryManager/View/: MemoryManagerView.cpp  MemoryManagerView.h
src/Tests/: LinkedList.h  TestMain.cpp
src/UI/: MainWindow.cpp  MainWindow.h
